fix/update coveralls